# parrot-neuro

./: .gitignore  LICENSE  README.md
containers/MRI_reconstruction_pipeline/: Dockerfile
containers/MRI_reconstruction_pipeline/scripts/: extract_charm_surf.py  make_atlas.py  run_cereb_pipeline.py  run_pipeline.sh  source_env.sh
containers/forward_model_computation/: place_dipoles.py
containers/parrot_MRI_reconstruction/: Dockerfile
containers/parrot_forward_model/: CMakeLists.txt  Dockerfile  mesh_to_vtu.py  mesher.cpp  nifti_to_inr.py  place_electrodes.py  requirements.txt
containers/parrot_mri_reconstruction/scripts/: bias_correct.py  gather_acoustic_labelfields.py  gather_electrical_labelfields.py  gather_surfaces.py  run_first_all_sequential
